Committing all working changes to game and js file.

--- a/index.html
+++ b/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
 <html lang="en-us">
 	<head>
-		<title>
-			The Broadway Hangman
-		</title>
+		<title>The Psychic Game</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="assets/javascript/game.js"></script>
 	</head>
 	<body>
-		<h1>
-			Welcome to B*R*O*A*D*W*A*Y Hangman!
-		</h1>
-		<div>
-		[IMG PLACEHOLDER]
-		</div>
-		<div>
-		<h2>
-			Let's Play! Press any key to begin.
-		</h2>
-		<div class="wins-div">[wins div]</div>
-		<div class="word-div">[word div]</div>
-		<div class="guessesleft-div">[guesses left div]</div>
-		<div class="lettersguessed-div">[lettersguessed div]</div>
+		<h1>The Psychic Game</h1>
+		<h2>Guess what letter I'm thinking of</h2>
+		<h2 id="wins"></h2>
+		<h2 id="losses"></h2>
+		<h2 id="guesses-left"></h2>
+		<h2 id="guesses-so-far"></h2>
 	</body>
 </html>
